# SysY-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  build_deploy.yml  release.yml  xiji_upload.yml
doc/: report_zou.md
runtime_lib/: sylib.h
src/: log.cpp  log.h  main.cpp  scope.h
src/frontend/: AST.cpp  AST.h  IR.cpp  IR.h  code_gen.cpp  code_gen_helper.cpp  code_gen_helper.h  const_eval.cpp  const_eval_helper.cpp  const_eval_helper.h  context.h  lexer.cpp  lexer.h  lexer.l  lexer_pattern.inc  lib.cpp  lib.h  loop_info.h  mem.cpp  mem.h  operator.h  parser.y  position.h  symbol_table.cpp  symbol_table.h  to_json.cpp  type.cpp  type.h
src/passes/: AllocationOrder.cpp  AllocationOrder.h  LiveDebugVariables.cpp  LiveDebugVariables.h  RegAllocBase.cpp  RegAllocBase.h  hello_world_pass.cpp  hello_world_pass.h  loop_deletion.cpp  loop_deletion.h  mem2reg_pass.cpp  mem2reg_pass.h  mem2reg_pass_helper.cpp  mem2reg_pass_helper.h  pass_manager.cpp  pass_manager.h  regalloc.cpp
test/competition/: test_wrapper.py
test/parser/: 1.sy  3.sy
